--- a/LimitCalc/package.yaml
+++ b/LimitCalc/package.yaml
@@ -43,12 +43,36 @@ executables:
     - LimitCalc
 
 tests:
-  LimitCalc-test:
+  limits-basic:
     main:                Spec.hs
-    source-dirs:         test
+    source-dirs:         test/limits/basic
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - LimitCalc
+    - hspec
+    - hspec-discover
+  limits-unstable:
+    main:                Spec.hs
+    source-dirs:         test/limits/unstable
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - LimitCalc
+    - hspec
+    - hspec-discover
+  parser:
+    main:                Spec.hs
+    source-dirs:         test/parser
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - LimitCalc
+    - hspec
+    - hspec-discover
