--- a/LimitCalc/package.yaml
+++ b/LimitCalc/package.yaml
@@ -43,9 +43,22 @@ executables:
     - LimitCalc
 
 tests:
+  limits:
+    main:                Runner.hs
+    source-dirs:
+    - test/runners/limits
+    - test
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - hspec
   limits-basic:
-    main:                Spec.hs
-    source-dirs:         test/limits/basic
+    main:                Runner.hs
+    source-dirs:
+    - test
+    - test/runners/limits/basic
     ghc-options:
     - -threaded
     - -rtsopts
@@ -53,10 +66,11 @@ tests:
     dependencies:
     - LimitCalc
     - hspec
-    - hspec-discover
   limits-unstable:
-    main:                Spec.hs
-    source-dirs:         test/limits/unstable
+    main:                Runner.hs
+    source-dirs:
+    - test
+    - test/runners/limits/unstable
     ghc-options:
     - -threaded
     - -rtsopts
@@ -64,15 +78,14 @@ tests:
     dependencies:
     - LimitCalc
     - hspec
-    - hspec-discover
   parser:
-    main:                Spec.hs
-    source-dirs:         test/parser
+    main:                Runner.hs
+    source-dirs:
+    - test/runners/parser
+    - test
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - LimitCalc
     - hspec
-    - hspec-discover
