wrap everything into `Calc` monad

--- a/LimitCalc/package.yaml
+++ b/LimitCalc/package.yaml
@@ -30,6 +30,8 @@ library:
   - LimitCalc.Expr
   - LimitCalc.Limits
   - LimitCalc.Parsing
+  ghc-options:
+  - -Wno-simplifiable-class-constraints
 
 executables:
   LimitCalc-exe:
