--- a/LimitCalc/package.yaml
+++ b/LimitCalc/package.yaml
@@ -49,49 +49,13 @@ executables:
 
 tests:
   limits:
-    main:                Runner.hs
-    source-dirs:
-    - test/runners/limits
-    - test
+    main:                Spec.hs
+    source-dirs:         test
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - hspec
+    - hspec-discover
     - LimitCalc
-  limits-basic:
-    main:                Runner.hs
-    source-dirs:
-    - test
-    - test/runners/limits/basic
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - LimitCalc
-    - hspec
-  limits-unstable:
-    main:                Runner.hs
-    source-dirs:
-    - test
-    - test/runners/limits/unstable
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - LimitCalc
-    - hspec
-  parser:
-    main:                Runner.hs
-    source-dirs:
-    - test/runners/parser
-    - test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - hspec
