veeeeery simple exact calculations + tests

--- a/LimitCalc/package.yaml
+++ b/LimitCalc/package.yaml
@@ -30,6 +30,7 @@ library:
   - LimitCalc
   - LimitCalc.Ast
   - LimitCalc.AstPoint
+  - LimitCalc.Exact
   - LimitCalc.Expr
   - LimitCalc.Parsing
   - LimitCalc.Point
